# Practice

./: .gitignore  .gitmodules  README.md  tags
advanced_algorithm/: Readme.md
algorithm-and-practice/: Readme.md
books_homework/: readme.md
books_homework/01/: .csapp.c.swp  CMakeLists.txt  csapp.c  csapp.cpp  csapp.h  csapp.hpp  echoclient.c  echoserver.c  main.c  read.md  tags
books_homework/epoll_example/: infrastructure.h  predefine.hpp  readme.md
books_homework/socket_cpp/: Makefile  cl_cpp.cpp  client_exe  readme.md  server  server_exe  sv_cpp.cpp
books_homework/stream_socket_server/: Makefile  ReadMe.md  error_functions.c  error_functions.h  inet_sockets.c  is_seqnum_cl.c  read_line.h  stream_socket_cl  stream_socket_sv
books_homework/tinyhttp_csapp/: CMakeLists.txt  csapp.c  home.html  main.c  read.md  tinyhttp.c  tinyhttpclient.c
cmake_example/: readme.md
cmake_example/01/: CMakeCache.txt  CMakeLists.txt  config.h.in  main.cc
cmake_example/01/math/: CMakeLists.txt  MathFunctions.cc  MathFunctions.h
cpp_practice/: Readme.md
cpp_practice/main/: CMakeLists.txt
cpp_practice/main/src/: CMakeLists.txt
cpp_practice/main/src/lib/: config.h  config.h.in  wheels.h
cpp_practice/main/test/: 0_test_wheels.cpp  CMakeLists.txt
csapp_homework/01/: CMakeLists.txt  main.c  server.c
interview_problem_set/: ReadMe.md  readme.md
interview_problem_set/Common_tools_implement/C_Log/: .format.c.swp  CMakeLists.txt  format.c  readme.md
interview_problem_set/Common_tools_implement/Math/: readme.md
interview_problem_set/Common_tools_implement/String/: CMakeLists.txt  more_string.hpp  readme.md  string.cpp  string.hpp  test.cpp
interview_problem_set/epoll_example/: readme.md
nodejs/0_1/: server_practice_1.js
rust_practice/: README.md
rust_practice/brainfuck/: Cargo.toml  README.md
rust_practice/grepImpByRust/: Cargo.toml  README.md
rust_practice/guessingGame/: Cargo.toml
rust_practice/guessingGame/src/: main.rs
rust_practice/helloWorld/: README.md
rust_practice/playGround/: Cargo.toml
rust_practice/playGround/src/: main.rs
socket_cpp/: client
stream_socket_server/: ename.c.inc  get_num.c  get_num.h  inet_sockets.h  is_seqnum.h  is_seqnum_sv.c  tlpi_hdr.h  unix_domain_sv  us_xfr_sv.c
tlpi-book/namespaces/: multi_pidns.c  ns_child_exec.c  ns_exec.c  ns_run.c  orphan.c  pidns_init_sleep.c  simple_init.c  t_setns_userns.c  unshare.c
tlpi-book/pipes/: fifo_seqnum_server.c
tlpi-book/procexec/: demo_clone.c  orphan.c  t_clone.c
tlpi-book/seccomp/: seccomp_control_open.c  seccomp_deny_open.c  seccomp_perf.c
tlpi-book/signals/: demo_SIGFPE.c  ignore_pending_sig.c
tlpi-book/sockets/: is_seqnum_sv.c  is_seqnum_v2_sv.c  us_xfr_sv.c
